--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <style>
         body { background: #0f172a; color: #ffffff; font-family: sans-serif; overflow-x: hidden; }
         .card-bg { background: #1e293b; border-radius: 20px; border: 1px solid #334155; transition: 0.3s; }
-        .card-bg:hover { border-color: #3b82f6; transform: translateY(-5px); }
+        .card-bg:hover { border-color: #3b82f6; transform: translateY(-3px); }
         .sidebar { background: #0f172a; border-left: 1px solid #334155; width: 280px; position: fixed; right: 0; top: 0; height: 100%; transform: translateX(100%); transition: 0.3s; z-index: 100; }
         .sidebar.active { transform: translateX(0); }
         .page-content { display: none; animation: slideUp 0.4s ease; }
         .page-content.active { display: block; }
         @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
-        .terminal { background: #000; border: 1px solid #3b82f6; border-radius: 12px; padding: 15px; font-family: monospace; color: #3b82f6; height: 150px; overflow-y: auto; }
-        input { background: #0f172a; border: 1px solid #334155; padding: 15px; border-radius: 12px; width: 100%; outline: none; margin-bottom: 12px; color: white; }
+        .terminal { background: #000; border: 1px solid #3b82f6; border-radius: 12px; padding: 15px; font-family: monospace; color: #3b82f6; height: 150px; overflow-y: auto; font-size: 11px; }
+        input, select { background: #0f172a; border: 1px solid #334155; padding: 15px; border-radius: 12px; width: 100%; outline: none; margin-bottom: 12px; color: white; }
         .btn-exe { background: linear-gradient(90deg, #1e40af, #3b82f6); width: 100%; padding: 15px; border-radius: 12px; font-weight: 900; text-transform: uppercase; letter-spacing: 1px; }
     </style>
 </head>
 <body class="p-5">
 
     <div class="flex justify-between items-center mb-8">
-        <h2 onclick="showPage('dashboard')" class="text-blue-500 font-black italic cursor-pointer">ARULMODSS CORE</h2>
+        <h2 onclick="showPage('dashboard')" class="text-blue-500 font-black italic cursor-pointer tracking-tighter text-xl">ARULMODSS <span class="text-white">CORE</span></h2>
         <button onclick="toggleMenu()" class="text-blue-500 text-2xl bg-[#1e293b] p-2 rounded-xl border border-blue-500/30">
             <i class="fa fa-bars"></i>
         </button>
@@ -31,43 +31,54 @@
 
     <div id="page-dashboard" class="page-content active">
         <div class="text-center mb-8">
-            <div class="w-24 h-24 rounded-full border-4 border-blue-600 flex items-center justify-center mx-auto mb-4 shadow-lg shadow-blue-500/20">
-                <span class="text-4xl font-bold text-blue-500 font-mono">A</span>
+            <div class="w-20 h-20 rounded-full border-4 border-blue-600 flex items-center justify-center mx-auto mb-4 shadow-lg shadow-blue-500/20">
+                <span class="text-3xl font-bold text-blue-500 font-mono">A</span>
             </div>
-            <h1 class="text-3xl font-black text-blue-500 tracking-tighter uppercase">ArulMods</h1>
-            <p class="text-gray-400 text-xs mt-1 uppercase tracking-widest italic font-bold">Pelajar | Developer | Indonesia</p>
-        </div>
-
-        <div class="card-bg p-6 mb-8 border-l-4 border-blue-500">
-            <h3 class="text-blue-400 font-bold mb-2 uppercase text-xs">System Status: <span class="text-green-500">Online</span></h3>
-            <p class="text-gray-300 text-sm italic">"Pilih senjata lo di bawah buat mulai ngebantai error."</p>
+            <h1 class="text-2xl font-black text-blue-500 uppercase">ArulMods</h1>
+            <p class="text-gray-400 text-[10px] mt-1 uppercase tracking-widest font-bold">V8.0 System Operational</p>
         </div>
 
         <div class="grid grid-cols-1 gap-4 mb-10">
-            <div onclick="showPage('getcode')" class="card-bg p-5 flex items-center cursor-pointer border border-transparent">
-                <div class="w-12 h-12 bg-blue-900/50 rounded-lg flex items-center justify-center mr-4 text-blue-400 text-xl"><i class="fa fa-file-code"></i></div>
-                <div><h4 class="font-bold text-blue-300">GET SOURCE CODE</h4><p class="text-[10px] text-gray-500 uppercase">Ambil script dari web manapun</p></div>
+            <div onclick="showPage('wa-tools')" class="card-bg p-5 flex items-center cursor-pointer border-l-4 border-green-500">
+                <div class="w-12 h-12 bg-green-900/30 rounded-lg flex items-center justify-center mr-4 text-green-500 text-xl"><i class="fab fa-whatsapp"></i></div>
+                <div><h4 class="font-bold text-green-400 text-sm">WA CHANNEL TOOLS</h4><p class="text-[9px] text-gray-500 uppercase">Suntik Saluran & Auto Respon</p></div>
             </div>
 
-            <div onclick="showPage('encode')" class="card-bg p-5 flex items-center cursor-pointer border border-transparent">
-                <div class="w-12 h-12 bg-yellow-900/50 rounded-lg flex items-center justify-center mr-4 text-yellow-500 text-xl"><i class="fa fa-lock"></i></div>
-                <div><h4 class="font-bold text-yellow-400">ENCODE HARD JS</h4><p class="text-[10px] text-gray-500 uppercase">Proteksi script kodingan lo</p></div>
+            <div onclick="showPage('getcode')" class="card-bg p-5 flex items-center cursor-pointer">
+                <div class="w-12 h-12 bg-blue-900/30 rounded-lg flex items-center justify-center mr-4 text-blue-400 text-xl"><i class="fa fa-file-code"></i></div>
+                <div><h4 class="font-bold text-blue-300 text-sm">GET SOURCE CODE</h4><p class="text-[9px] text-gray-500 uppercase">Scraper Web Script</p></div>
             </div>
 
-            <div onclick="showPage('tiktok')" class="card-bg p-5 flex items-center cursor-pointer border border-transparent">
-                <div class="w-12 h-12 bg-pink-900/50 rounded-lg flex items-center justify-center mr-4 text-pink-500 text-xl"><i class="fab fa-tiktok"></i></div>
-                <div><h4 class="font-bold text-pink-400">TIKTOK DOWNLOADER</h4><p class="text-[10px] text-gray-500 uppercase">Download video tanpa watermark</p></div>
+            <div onclick="showPage('encode')" class="card-bg p-5 flex items-center cursor-pointer">
+                <div class="w-12 h-12 bg-yellow-900/30 rounded-lg flex items-center justify-center mr-4 text-yellow-500 text-xl"><i class="fa fa-lock"></i></div>
+                <div><h4 class="font-bold text-yellow-400 text-sm">ENCODE HARD JS</h4><p class="text-[9px] text-gray-500 uppercase">Obfuscator Script</p></div>
             </div>
-            
-            <div class="card-bg p-8 border-t-2 border-blue-900/30">
-                <p class="text-gray-400 text-xs italic text-center font-light leading-relaxed">"Ngoding itu ngajarin kita banyak hal. Gagal compile? Biasa. Error? Santai."</p>
+
+            <div onclick="showPage('tiktok')" class="card-bg p-5 flex items-center cursor-pointer">
+                <div class="w-12 h-12 bg-pink-900/30 rounded-lg flex items-center justify-center mr-4 text-pink-500 text-xl"><i class="fab fa-tiktok"></i></div>
+                <div><h4 class="font-bold text-pink-400 text-sm">TIKTOK DOWNLOADER</h4><p class="text-[9px] text-gray-500 uppercase">Video No Watermark</p></div>
             </div>
         </div>
     </div>
 
+    <div id="page-wa-tools" class="page-content">
+        <button onclick="showPage('dashboard')" class="text-green-500 text-sm mb-4"><i class="fa fa-arrow-left mr-2"></i> Dashboard</button>
+        <h2 class="text-xl font-black text-green-500 mb-6 uppercase italic">WA Channel Injector</h2>
+        <div class="card-bg p-6">
+            <select id="wa-type">
+                <option value="suntik">Suntik Saluran (Followers)</option>
+                <option value="respon">Auto Respon Saluran</option>
+            </select>
+            <input type="text" id="wa-target" placeholder="Link Saluran / API Key Bot">
+            <input type="number" id="wa-count" placeholder="Jumlah (Untuk Suntik)">
+            <button onclick="exeWaTools()" class="btn-exe !from-green-700 !to-green-500">Jalankan Injeksi</button>
+            <div id="term-wa" class="terminal mt-4 !border-green-600 !text-green-500"></div>
+        </div>
+    </div>
+
     <div id="page-getcode" class="page-content">
-        <button onclick="showPage('dashboard')" class="text-blue-400 text-sm mb-4"><i class="fa fa-arrow-left mr-2"></i> Kembali</button>
-        <h2 class="text-2xl font-black text-blue-500 mb-6 uppercase italic">Source Scraper</h2>
+        <button onclick="showPage('dashboard')" class="text-blue-400 text-sm mb-4"><i class="fa fa-arrow-left mr-2"></i> Dashboard</button>
+        <h2 class="text-xl font-black text-blue-500 mb-6 uppercase italic">Source Scraper</h2>
         <div class="card-bg p-6">
             <input type="text" id="input-getcode" placeholder="Masukkan URL Target (https://...)">
             <button onclick="exeGetCode()" class="btn-exe">Tarik Source</button>
@@ -76,18 +87,18 @@
     </div>
 
     <div id="page-encode" class="page-content">
-        <button onclick="showPage('dashboard')" class="text-yellow-500 text-sm mb-4"><i class="fa fa-arrow-left mr-2"></i> Kembali</button>
-        <h2 class="text-2xl font-black text-yellow-500 mb-6 uppercase italic">Obfuscator JS</h2>
+        <button onclick="showPage('dashboard')" class="text-yellow-500 text-sm mb-4"><i class="fa fa-arrow-left mr-2"></i> Dashboard</button>
+        <h2 class="text-xl font-black text-yellow-500 mb-6 uppercase italic">Obfuscator JS</h2>
         <div class="card-bg p-6">
-            <textarea id="input-encode" class="input-core bg-[#0f172a] w-full p-4 rounded-xl border border-gray-700 h-40 mb-4 text-white outline-none" placeholder="Paste script JS lo di sini..."></textarea>
-            <button onclick="exeEncode()" class="btn-exe !bg-yellow-600">Encrypt Script</button>
+            <textarea id="input-encode" class="input-core bg-[#0f172a] w-full p-4 rounded-xl border border-gray-700 h-32 mb-4 text-white" placeholder="Paste script JS lo di sini..."></textarea>
+            <button onclick="exeEncode()" class="btn-exe !bg-yellow-600">Encrypt Now</button>
             <div id="term-encode" class="terminal mt-4 !border-yellow-600 !text-yellow-500"></div>
         </div>
     </div>
 
     <div id="page-tiktok" class="page-content">
-        <button onclick="showPage('dashboard')" class="text-pink-500 text-sm mb-4"><i class="fa fa-arrow-left mr-2"></i> Kembali</button>
-        <h2 class="text-2xl font-black text-pink-500 mb-6 uppercase italic">TikTok Bypass</h2>
+        <button onclick="showPage('dashboard')" class="text-pink-500 text-sm mb-4"><i class="fa fa-arrow-left mr-2"></i> Dashboard</button>
+        <h2 class="text-xl font-black text-pink-500 mb-6 uppercase italic">TikTok Bypass</h2>
         <div class="card-bg p-6">
             <input type="text" id="input-tiktok" placeholder="Paste Link Video TikTok">
             <button onclick="exeTikTok()" class="btn-exe !bg-pink-600">Download Video</button>
@@ -97,15 +108,16 @@
 
     <div id="menuSidebar" class="sidebar p-6 shadow-2xl">
         <div class="flex justify-between items-center mb-8">
-            <h2 class="text-xl font-black text-blue-500 uppercase tracking-tighter italic">System Core</h2>
-            <button onclick="toggleMenu()" class="text-3xl text-blue-500">&times;</button>
+            <h2 class="text-xl font-black text-blue-500 uppercase">System Core</h2>
+            <button onclick="toggleMenu()" class="text-3xl">&times;</button>
         </div>
-        <ul class="space-y-4 font-bold text-xs uppercase tracking-[0.2em]">
-            <li onclick="showPage('dashboard')" class="p-3 hover:bg-blue-900/30 rounded-xl cursor-pointer transition"><i class="fa fa-home mr-3 text-blue-400"></i> Dashboard</li>
-            <li onclick="showPage('getcode')" class="p-3 hover:bg-blue-900/30 rounded-xl cursor-pointer transition"><i class="fa fa-file-alt mr-3 text-blue-400"></i> Get Code</li>
-            <li onclick="showPage('encode')" class="p-3 hover:bg-blue-900/30 rounded-xl cursor-pointer transition"><i class="fa fa-lock mr-3 text-yellow-600"></i> Encode JS</li>
-            <li onclick="showPage('tiktok')" class="p-3 hover:bg-blue-900/30 rounded-xl cursor-pointer transition"><i class="fab fa-tiktok mr-3 text-pink-600"></i> TikTok</li>
-            <li onclick="location.reload()" class="p-3 text-red-500 mt-20 border-t border-gray-800 pt-10"><i class="fa fa-power-off mr-3"></i> Reboot</li>
+        <ul class="space-y-4 font-bold text-[10px] uppercase tracking-widest">
+            <li onclick="showPage('dashboard')" class="p-3 hover:bg-gray-800 rounded-xl cursor-pointer"><i class="fa fa-home mr-3"></i> Dashboard</li>
+            <li onclick="showPage('wa-tools')" class="p-3 hover:bg-gray-800 rounded-xl cursor-pointer text-green-500"><i class="fab fa-whatsapp mr-3"></i> WA Tools</li>
+            <li onclick="showPage('getcode')" class="p-3 hover:bg-gray-800 rounded-xl cursor-pointer"><i class="fa fa-file-alt mr-3"></i> Get Code</li>
+            <li onclick="showPage('encode')" class="p-3 hover:bg-gray-800 rounded-xl cursor-pointer text-yellow-500"><i class="fa fa-lock mr-3"></i> Encode JS</li>
+            <li onclick="showPage('tiktok')" class="p-3 hover:bg-gray-800 rounded-xl cursor-pointer text-pink-500"><i class="fab fa-tiktok mr-3"></i> TikTok</li>
+            <li onclick="location.reload()" class="p-3 text-red-500 mt-20 border-t border-gray-800 pt-5"><i class="fa fa-power-off mr-3"></i> Reboot</li>
         </ul>
     </div>
 
@@ -119,34 +131,51 @@
             window.scrollTo(0,0);
         }
 
-        function log(termId, text) {
+        function log(termId, text, color="") {
             const term = document.getElementById(termId);
-            term.innerHTML += `<p class="mb-1">> ${text}</p>`;
+            const time = new Date().toLocaleTimeString();
+            term.innerHTML += `<p class="${color}">[${time}] > ${text}</p>`;
             term.scrollTop = term.scrollHeight;
+        }
+
+        // --- FUNGSI WA TOOLS ---
+        function exeWaTools() {
+            const type = document.getElementById('wa-type').value;
+            const target = document.getElementById('wa-target').value;
+            const count = document.getElementById('wa-count').value;
+            if(!target) return alert("Target diperlukan!");
+
+            log('term-wa', `Menginisialisasi modul ${type}...`, 'text-white');
+            
+            if(type === 'suntik') {
+                log('term-wa', `Menghubungkan ke database SMM WhatsApp...`);
+                setTimeout(() => log('term-wa', `Proses suntik ${count} followers ke ${target} dimulai.`, 'text-yellow-400'), 1500);
+            } else {
+                log('term-wa', `Menghubungkan API Saluran...`);
+                setTimeout(() => log('term-wa', `Bot Respon Saluran Aktif di target: ${target}`, 'text-blue-400'), 1500);
+            }
         }
 
         function exeGetCode() {
             const val = document.getElementById('input-getcode').value;
             if(!val) return alert("URL Kosong!");
-            log('term-getcode', 'Scanning target: ' + val);
+            log('term-getcode', 'Scanning target...');
             window.open(`https://api.allorigins.win/get?url=${encodeURIComponent(val)}`, '_blank');
-            log('term-getcode', 'Sukses! Source Code dibuka di tab baru.');
+            log('term-getcode', 'Source ditarik ke tab baru.');
         }
 
         function exeEncode() {
             const val = document.getElementById('input-encode').value;
             if(!val) return alert("Script Kosong!");
             const res = btoa(val.split("").reverse().join(""));
-            log('term-encode', 'Encrypting...');
-            log('term-encode', 'HASIL: eval(atob("' + res + '").split("").reverse().join(""))');
+            log('term-encode', 'Encoded: eval(atob("' + res + '").split("").reverse().join(""))');
         }
 
         function exeTikTok() {
             const val = document.getElementById('input-tiktok').value;
             if(!val) return alert("Link Kosong!");
-            log('term-tiktok', 'Fetching video data...');
+            log('term-tiktok', 'Redirecting to TikWM server...');
             window.open(`https://tikwm.com/?url=${val}`, '_blank');
-            log('term-tiktok', 'Selesai. Cek server download.');
         }
     </script>
 </body>
